--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,369 @@ obsidian_notes/fc5cb733-d0be-4761-a40a-e0b5b9d62f18.md
 obsidian_notes/feb0fa83-b6b1-44ef-aed9-30715336aa10.md
 obsidian_notes/ffef6a63-4fd8-47c5-b295-f2957c3368e6.md
 Sticky_Notes.csv
+obsidian_notes/637546733904498710.md
+obsidian_notes/637550737547609753.md
+obsidian_notes/637551537105235467.md
+obsidian_notes/637552412812747845.md
+obsidian_notes/637557580627782279.md
+obsidian_notes/637559224792226332.md
+obsidian_notes/637562720472948028.md
+obsidian_notes/637564642804008868.md
+obsidian_notes/637566368552700905.md
+obsidian_notes/637569369071794960.md
+obsidian_notes/637570540208262774.md
+obsidian_notes/637576654568091174.md
+obsidian_notes/637583402060091497.md
+obsidian_notes/637593075118275382.md
+obsidian_notes/637595538985895158.md
+obsidian_notes/637595713360155312.md
+obsidian_notes/637596192683803819.md
+obsidian_notes/637600699799538359.md
+obsidian_notes/637600749952449775.md
+obsidian_notes/637604287166701974.md
+obsidian_notes/637605975540174424.md
+obsidian_notes/637605978804072832.md
+obsidian_notes/637617319911510795.md
+obsidian_notes/637617870024895189.md
+obsidian_notes/637632023903502437.md
+obsidian_notes/637635132293781465.md
+obsidian_notes/637638594076783820.md
+obsidian_notes/637641813536849211.md
+obsidian_notes/637649280428860563.md
+obsidian_notes/637650023654933587.md
+obsidian_notes/637659620528846219.md
+obsidian_notes/637659620969392405.md
+obsidian_notes/637666298422666509.md
+obsidian_notes/637666341022464429.md
+obsidian_notes/637671630523328708.md
+obsidian_notes/637673429154899932.md
+obsidian_notes/637674989378038593.md
+obsidian_notes/637682948965414264.md
+obsidian_notes/637689202856568392.md
+obsidian_notes/637691310675438262.md
+obsidian_notes/637691653223247352.md
+obsidian_notes/637692666904972769.md
+obsidian_notes/637696768384737298.md
+obsidian_notes/637699254453373320.md
+obsidian_notes/637702754818290851.md
+obsidian_notes/637717323063115195.md
+obsidian_notes/637763289270067654.md
+obsidian_notes/637764114898240780.md
+obsidian_notes/637769103432357034.md
+obsidian_notes/637792709375118882.md
+obsidian_notes/637799637963232027.md
+obsidian_notes/637807427207569146.md
+obsidian_notes/637828982511855219.md
+obsidian_notes/637834934793978476.md
+obsidian_notes/637838403116808918.md
+obsidian_notes/637842859351620692.md
+obsidian_notes/637848150119347809.md
+obsidian_notes/637865185570703260.md
+obsidian_notes/637868592685080900.md
+obsidian_notes/637871230274988564.md
+obsidian_notes/637873166384251721.md
+obsidian_notes/637879795194425968.md
+obsidian_notes/637883592623518146.md
+obsidian_notes/637902333194854717.md
+obsidian_notes/637909286749428876.md
+obsidian_notes/637918790824837998.md
+obsidian_notes/637919888229697320.md
+obsidian_notes/637952538065321303.md
+obsidian_notes/637967879675474091.md
+obsidian_notes/637968023345576024.md
+obsidian_notes/637968108941269691.md
+obsidian_notes/637986185067826945.md
+obsidian_notes/637986195562793216.md
+obsidian_notes/637986789156188907.md
+obsidian_notes/637994858072618921.md
+obsidian_notes/638008438704732979.md
+obsidian_notes/638013170970502751.md
+obsidian_notes/638018810121355480.md
+obsidian_notes/638020918946587023.md
+obsidian_notes/638025071105448939.md
+obsidian_notes/638047504079350932.md
+obsidian_notes/638052635989550399.md
+obsidian_notes/638053674335101503.md
+obsidian_notes/638095826517206716.md
+obsidian_notes/638104521456048999.md
+obsidian_notes/638108599550721695.md
+obsidian_notes/638122590769882562.md
+obsidian_notes/638162550598436731.md
+obsidian_notes/638164376794678688.md
+obsidian_notes/638175532677295934.md
+obsidian_notes/638177077021938291.md
+obsidian_notes/638216050430371460.md
+obsidian_notes/638225384318433796.md
+obsidian_notes/638259432929238836.md
+obsidian_notes/638259844687105087.md
+obsidian_notes/638267814834894263.md
+obsidian_notes/638271334107914213.md
+obsidian_notes/638272057499539906.md
+obsidian_notes/638282360176139598.md
+obsidian_notes/638282472801983227.md
+obsidian_notes/638284099585104362.md
+obsidian_notes/638306828706894528.md
+obsidian_notes/638314598631357789.md
+obsidian_notes/638314862581037432.md
+obsidian_notes/638316308555638387.md
+obsidian_notes/638318733193021461.md
+obsidian_notes/638326877146705358.md
+obsidian_notes/638330815660467274.md
+obsidian_notes/638330914346308282.md
+obsidian_notes/638333355332099318.md
+obsidian_notes/638333358152878918.md
+obsidian_notes/638338508411050000.md
+obsidian_notes/638340561605668568.md
+obsidian_notes/638343839330655615.md
+obsidian_notes/638349192555245096.md
+obsidian_notes/638349762215401143.md
+obsidian_notes/638350825535462643.md
+obsidian_notes/638352054997315993.md
+obsidian_notes/638359382520650799.md
+obsidian_notes/638371076367201983.md
+obsidian_notes/638373385216320000.md
+obsidian_notes/638375905780730382.md
+obsidian_notes/638387767040325179.md
+obsidian_notes/638396712322160351.md
+obsidian_notes/638398140965990000.md
+obsidian_notes/638404206970432362.md
+obsidian_notes/638405962437994800.md
+obsidian_notes/638407462661627528.md
+obsidian_notes/638428587477526284.md
+obsidian_notes/638431085094980187.md
+obsidian_notes/638434419747396886.md
+obsidian_notes/638434526714100126.md
+obsidian_notes/638441304775782806.md
+obsidian_notes/638447330824866321.md
+obsidian_notes/638450753761356118.md
+obsidian_notes/638452585683873107.md
+obsidian_notes/638463007831832613.md
+obsidian_notes/638465767240572002.md
+obsidian_notes/638465790380565818.md
+obsidian_notes/638467047274489070.md
+obsidian_notes/638472041571353611.md
+obsidian_notes/638484672872824564.md
+obsidian_notes/638489367359699929.md
+obsidian_notes/638491229882724734.md
+obsidian_notes/638495754274224782.md
+obsidian_notes/638505375578731266.md
+obsidian_notes/638519657511600000.md
+obsidian_notes/638520440243079853.md
+obsidian_notes/638532287923366604.md
+obsidian_notes/638533420513576385.md
+obsidian_notes/638533508050993774.md
+obsidian_notes/638544573488530436.md
+obsidian_notes/638549543665985495.md
+obsidian_notes/638551646413839759.md
+obsidian_notes/638554307237425450.md
+obsidian_notes/638563421034977502.md
+obsidian_notes/638566754747256781.md
+obsidian_notes/638571427633479812.md
+obsidian_notes/638572668273073643.md
+obsidian_notes/638574780064561293.md
+obsidian_notes/638581197802767485.md
+obsidian_notes/638586117891965104.md
+obsidian_notes/638588213375042899.md
+obsidian_notes/638588241249327360.md
+obsidian_notes/638590304113333911.md
+obsidian_notes/638592922970864424.md
+obsidian_notes/638602150042592750.md
+obsidian_notes/638614948656073797.md
+obsidian_notes/638660307625871738.md
+obsidian_notes/638673402582392197.md
+obsidian_notes/638678699094524436.md
+obsidian_notes/638696345182002399.md
+obsidian_notes/638706732906821332.md
+obsidian_notes/638710391229366702.md
+obsidian_notes/638711689719870869.md
+obsidian_notes/638728321681732544.md
+obsidian_notes/638730954950749291.md
+obsidian_notes/638756681421680000.md
+obsidian_notes/638756885459666115.md
+obsidian_notes/638770104386888696.md
+obsidian_notes/638782415936117253.md
+obsidian_notes/638783888298229889.md
+obsidian_notes/638784553048930294.md
+obsidian_notes/2021-04-22.md
+obsidian_notes/2021-04-26.md
+obsidian_notes/2021-04-27.md
+obsidian_notes/2021-04-28.md
+obsidian_notes/2021-05-04.md
+obsidian_notes/2021-05-06.md
+obsidian_notes/2021-05-10.md
+obsidian_notes/2021-05-13.md
+obsidian_notes/2021-05-15.md
+obsidian_notes/2021-05-18.md
+obsidian_notes/2021-05-19.md
+obsidian_notes/2021-05-26.md
+obsidian_notes/2021-06-03.md
+obsidian_notes/2021-06-14.md
+obsidian_notes/2021-06-17.md
+obsidian_notes/2021-06-18_1.md
+obsidian_notes/2021-06-18.md
+obsidian_notes/2021-06-23_1.md
+obsidian_notes/2021-06-23.md
+obsidian_notes/2021-06-27.md
+obsidian_notes/2021-06-29_1.md
+obsidian_notes/2021-06-29.md
+obsidian_notes/2021-07-13_1.md
+obsidian_notes/2021-07-13.md
+obsidian_notes/2021-07-30.md
+obsidian_notes/2021-08-02.md
+obsidian_notes/2021-08-06.md
+obsidian_notes/2021-08-10.md
+obsidian_notes/2021-08-19_1.md
+obsidian_notes/2021-08-19.md
+obsidian_notes/2021-08-30_1.md
+obsidian_notes/2021-08-30.md
+obsidian_notes/2021-09-07_1.md
+obsidian_notes/2021-09-07.md
+obsidian_notes/2021-09-13.md
+obsidian_notes/2021-09-15.md
+obsidian_notes/2021-09-17.md
+obsidian_notes/2021-09-26.md
+obsidian_notes/2021-10-04.md
+obsidian_notes/2021-10-06.md
+obsidian_notes/2021-10-07.md
+obsidian_notes/2021-10-08.md
+obsidian_notes/2021-10-12.md
+obsidian_notes/2021-10-15.md
+obsidian_notes/2021-10-19.md
+obsidian_notes/2021-11-05.md
+obsidian_notes/2021-12-28.md
+obsidian_notes/2021-12-29.md
+obsidian_notes/2022-01-04.md
+obsidian_notes/2022-02-01.md
+obsidian_notes/2022-02-09.md
+obsidian_notes/2022-02-18.md
+obsidian_notes/2022-03-14.md
+obsidian_notes/2022-03-21.md
+obsidian_notes/2022-03-25.md
+obsidian_notes/2022-03-31.md
+obsidian_notes/2022-04-06.md
+obsidian_notes/2022-04-25.md
+obsidian_notes/2022-04-29.md
+obsidian_notes/2022-05-02.md
+obsidian_notes/2022-05-05.md
+obsidian_notes/2022-05-12.md
+obsidian_notes/2022-05-17.md
+obsidian_notes/2022-06-07.md
+obsidian_notes/2022-06-15.md
+obsidian_notes/2022-06-26.md
+obsidian_notes/2022-06-28.md
+obsidian_notes/2022-08-04.md
+obsidian_notes/2022-08-22_1.md
+obsidian_notes/2022-08-22.md
+obsidian_notes/2022-08-23.md
+obsidian_notes/2022-09-12_1.md
+obsidian_notes/2022-09-12.md
+obsidian_notes/2022-09-13.md
+obsidian_notes/2022-09-22.md
+obsidian_notes/2022-10-08.md
+obsidian_notes/2022-10-14.md
+obsidian_notes/2022-10-20.md
+obsidian_notes/2022-10-23.md
+obsidian_notes/2022-10-27.md
+obsidian_notes/2022-11-22.md
+obsidian_notes/2022-11-28.md
+obsidian_notes/2022-11-30.md
+obsidian_notes/2023-01-17.md
+obsidian_notes/2023-01-27.md
+obsidian_notes/2023-02-01.md
+obsidian_notes/2023-02-17.md
+obsidian_notes/2023-04-05.md
+obsidian_notes/2023-04-07.md
+obsidian_notes/2023-04-20.md
+obsidian_notes/2023-04-21.md
+obsidian_notes/2023-06-05.md
+obsidian_notes/2023-06-16.md
+obsidian_notes/2023-07-26_1.md
+obsidian_notes/2023-07-26.md
+obsidian_notes/2023-08-04.md
+obsidian_notes/2023-08-08.md
+obsidian_notes/2023-08-10.md
+obsidian_notes/2023-08-21.md
+obsidian_notes/2023-08-23.md
+obsidian_notes/2023-09-19.md
+obsidian_notes/2023-09-28_1.md
+obsidian_notes/2023-09-28.md
+obsidian_notes/2023-09-30.md
+obsidian_notes/2023-10-02.md
+obsidian_notes/2023-10-12.md
+obsidian_notes/2023-10-16_1.md
+obsidian_notes/2023-10-16.md
+obsidian_notes/2023-10-18.md
+obsidian_notes/2023-10-19_1.md
+obsidian_notes/2023-10-19.md
+obsidian_notes/2023-10-25.md
+obsidian_notes/2023-10-28.md
+obsidian_notes/2023-10-31.md
+obsidian_notes/2023-11-07_1.md
+obsidian_notes/2023-11-07.md
+obsidian_notes/2023-11-08.md
+obsidian_notes/2023-11-10.md
+obsidian_notes/2023-11-18.md
+obsidian_notes/2023-12-02.md
+obsidian_notes/2023-12-05.md
+obsidian_notes/2023-12-08.md
+obsidian_notes/2023-12-21.md
+obsidian_notes/2024-01-01.md
+obsidian_notes/2024-01-02.md
+obsidian_notes/2024-01-09.md
+obsidian_notes/2024-01-11.md
+obsidian_notes/2024-01-13.md
+obsidian_notes/2024-02-06.md
+obsidian_notes/2024-02-09.md
+obsidian_notes/2024-02-13_1.md
+obsidian_notes/2024-02-13.md
+obsidian_notes/2024-02-21.md
+obsidian_notes/2024-02-28.md
+obsidian_notes/2024-03-03.md
+obsidian_notes/2024-03-05.md
+obsidian_notes/2024-03-17.md
+obsidian_notes/2024-03-21_1.md
+obsidian_notes/2024-03-21.md
+obsidian_notes/2024-03-22.md
+obsidian_notes/2024-03-28.md
+obsidian_notes/2024-04-11.md
+obsidian_notes/2024-04-17.md
+obsidian_notes/2024-04-19.md
+obsidian_notes/2024-04-24.md
+obsidian_notes/2024-05-05.md
+obsidian_notes/2024-05-22.md
+obsidian_notes/2024-05-23.md
+obsidian_notes/2024-06-05.md
+obsidian_notes/2024-06-07_1.md
+obsidian_notes/2024-06-07.md
+obsidian_notes/2024-06-20.md
+obsidian_notes/2024-06-25.md
+obsidian_notes/2024-06-28.md
+obsidian_notes/2024-07-01.md
+obsidian_notes/2024-07-12.md
+obsidian_notes/2024-07-15.md
+obsidian_notes/2024-07-21.md
+obsidian_notes/2024-07-22.md
+obsidian_notes/2024-07-25.md
+obsidian_notes/2024-08-01.md
+obsidian_notes/2024-08-07.md
+obsidian_notes/2024-08-09_1.md
+obsidian_notes/2024-08-09.md
+obsidian_notes/2024-08-12.md
+obsidian_notes/2024-08-15.md
+obsidian_notes/2024-08-25.md
+obsidian_notes/2024-09-09.md
+obsidian_notes/2024-11-01.md
+obsidian_notes/2024-11-16.md
+obsidian_notes/2024-11-22.md
+obsidian_notes/2024-12-12.md
+obsidian_notes/2024-12-24.md
+obsidian_notes/2024-12-29.md
+obsidian_notes/2025-01-25_1.md
+obsidian_notes/2025-01-25_2.md
+obsidian_notes/2025-01-25.md
+obsidian_notes/2025-02-20_1.md
+obsidian_notes/2025-02-20.md
+obsidian_notes/2025-03-08.md
+obsidian_notes/2025-03-22.md
+obsidian_notes/2025-03-24_1.md
+obsidian_notes/2025-03-24.md
